# alarm-clock

./: .pre-commit-config.yaml  Makefile  pyproject.toml
alarm_clock/: clock.py  cron.py  main.py  models.py  ring.py
alarm_clock_frontend/: package-lock.json  package.json
alarm_clock_frontend/public/: manifest.json
alarm_clock_frontend/src/: App.css  App.js
