[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]
name="alarm-clock"
version="0.0.0"
dependencies=[
    "python-crontab",
    "fastapi"
]
requires-python=">=3.9.5"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyright",
    "uvicorn[standard]",
    "ruff"
]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where=["alarm_clock"]

[tool.pyright]
exclude=["tests/*"]
venv=".venv"
venvPath="."
typeCheckingMode="standard"

[tool.ruff]
line-length = 88
src=["alarm_clock"]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]